# Towns-Game

./: .gitmodules  CMakeLists.txt  README.md
doxygen/: config.txt
doxygen/html/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html
doxygen/html/d1/d00/: inout_8hpp_source.html
doxygen/html/d4/d00/: classtowns__game_1_1no__more__towns.html
doxygen/html/d9/d00/: towns__game_8hpp_source.html
doxygen/html/db/d00/: dialogue_8hpp_source.html  namespacetowns__game.html
doxygen/html/dd/d00/: classtowns__game_1_1no__more__towns-members.html
doxygen/html/de/d00/: namespacedialogue.html  namespaceinout.html
doxygen/html/search/: all_4.js  all_6.js  all_7.js  all_9.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  namespaces_0.js  namespaces_1.js  searchdata.js  variables_0.js
doxygen/latex/: annotated.tex  files.tex  hierarchy.tex  namespaces.tex  refman.tex
doxygen/latex/d1/d00/: inout_8hpp_source.tex
doxygen/latex/d4/d00/: classtowns__game_1_1no__more__towns.eps  classtowns__game_1_1no__more__towns.tex
doxygen/latex/d9/d00/: towns__game_8hpp_source.tex
include/: dialogue.hpp  inout.hpp  towns_game.hpp
resources/: towns_eng.txt
resources/tests/: finding.txt  generator.py  normal_game.txt
src/dialogue_program/: c_dialogue.cpp  dialogue.cpp  main.cpp
src/testing/: test.cpp
src/towns_game_lib/: towns_game.cpp  towns_game_extra.cpp  towns_game_private.hpp
(+4 files in other folders)
